--- a/popup/style.css
+++ b/popup/style.css
@@ -1,8 +1,18 @@
 html, body {
-    width: 100px;
+    width: 500px;
 }
 
 .hidden {
     display: none;
 }
 
+button {
+  border: none;
+  width: 100%;
+  margin: 3% auto;
+  padding: 4px;
+  text-align: center;
+  font-size: 1.5em;
+  cursor: pointer;
+  background-color: #e5f2f2;
+}
